--- a/03_staticsite/templates/base.html
+++ b/03_staticsite/templates/base.html
@@ -5,6 +5,7 @@
       content="text/html; charset=utf-8">
     <link  href="/static/css/flask.css" rel="stylesheet">
     <script src="/static/js/flask.js"></script>
+    <link rel=”icon” href=“/static/image/favicon.ico”>
     <title>{{ title }}</title>
   </head>
   <body>
